--- a/src/HOAHome/HOAHome/HOAHome.csproj
+++ b/src/HOAHome/HOAHome/HOAHome.csproj
@@ -117,6 +117,9 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Code\Configuration.cs" />
     <Compile Include="Code\EntityFramework\IAuditable.cs">
       <SubType>Code</SubType>
@@ -151,14 +154,24 @@
     <Compile Include="Code\Security\Identity.cs" />
     <Compile Include="Code\State.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DevelopmentController.cs" />
     <Compile Include="Controllers\DirectorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NeighborhoodController.cs" />
     <Compile Include="Controllers\UserHomeController.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DevelopmentController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DirectorController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="HomeController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CustomModel.cs">
       <AutoGen>True</AutoGen>
@@ -169,16 +182,25 @@
     <Compile Include="Models\Custom\COHHomeEntities.cs" />
     <Compile Include="Models\Custom\Neighborhood.cs" />
     <Compile Include="Models\Custom\UserHome.cs" />
+    <Compile Include="NeighborhoodController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GisService.cs" />
     <Compile Include="Services\HoaService.cs" />
     <Compile Include="Services\IGisService.cs" />
     <Compile Include="Services\IHoaService.cs" />
+    <Compile Include="SharedController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="T4MVC.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
       <SubType>Code</SubType>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Include="UserHomeController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -187,6 +209,7 @@
     <Content Include="Global.asax" />
     <Content Include="Services\HoaService.svc" />
     <Content Include="Views\Account\Settings.aspx" />
+    <Content Include="Views\Development\Links.aspx" />
     <Content Include="Views\Director\Financals.aspx" />
     <Content Include="Views\Director\Members.aspx" />
     <Content Include="Views\Home\DisplaySearchResults.aspx" />
