--- a/src/HOAHome/HOAHome/HOAHome.csproj
+++ b/src/HOAHome/HOAHome/HOAHome.csproj
@@ -186,6 +186,10 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\INeighborhoodRepository.cs" />
+    <Compile Include="Repositories\IRepositoryFactory.cs" />
+    <Compile Include="Repositories\NeighborhoodRepository.cs" />
+    <Compile Include="Repositories\RepositoryFactory.cs" />
     <Compile Include="Services\GisService.cs" />
     <Compile Include="Services\HoaService.cs" />
     <Compile Include="Services\IGisService.cs" />
@@ -208,6 +212,7 @@
     <Content Include="Content\anylinkcssmenu.js" />
     <Content Include="Global.asax" />
     <Content Include="Services\HoaService.svc" />
+    <Content Include="TODO.txt" />
     <Content Include="Views\Account\Settings.aspx" />
     <Content Include="Views\Development\Links.aspx" />
     <Content Include="Views\Director\Financals.aspx" />
@@ -271,6 +276,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CustomModel.cs</LastGenOutput>
     </None>
+    <None Include="StartWeb.bat" />
     <None Include="T4MVC.settings.t4" />
     <None Include="T4MVC.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
