--- a/src/HOAHome/HOAHome.Tests/App.config
+++ b/src/HOAHome/HOAHome.Tests/App.config
@@ -9,6 +9,6 @@
     </appSettings>
 
   <connectionStrings>
-    <add name="COHHomeEntities" connectionString="metadata=res://*/Models.EFModel.csdl|res://*/Models.EFModel.ssdl|res://*/Models.EFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost\MSSQLSERVER2008;Initial Catalog=COHHome;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="COHHomeEntities" connectionString="metadata=res://*/Models.EFModel.csdl|res://*/Models.EFModel.ssdl|res://*/Models.EFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost;Initial Catalog=HOAHomeDB;Integrated Security=true;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
