--- a/src/gwt20/HOAGwt20/.classpath
+++ b/src/gwt20/HOAGwt20/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="src" output="test-classes" path="test"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/gwt-multipage-1.0.0.Beta4.jar"/>
+	<classpathentry kind="lib" path="lib/gwt-maps.jar"/>
+	<classpathentry kind="lib" path="C:/eclispse/plugins/org.junit_3.8.2.v20090203-1005/junit.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
