--- a/src/HOAHome/HOAHome/Web.config
+++ b/src/HOAHome/HOAHome/Web.config
@@ -38,6 +38,7 @@
     <add key="GoogleApiKey" value="ABQIAAAACPMbozlNv9AIzNvsWUm6vhSvnLMDprvOSMH9Qt_oH5Ww7FTw1hRHT7gTSie1yM34rowNwVfw424XPA" />
   </appSettings>
   <system.web>
+    <httpRuntime requestValidationMode="2.0"/>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -68,18 +69,22 @@
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
       </providers>
     </roleManager>
-    <pages>
+    <pages validateRequest="false" >
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="HOAHome.Code.Mvc" />
+        <add namespace="HOAHome.Code.ContentManagement" />
+        <add namespace="HOAHome.Models" />
       </namespaces>
     </pages>
     <httpHandlers>
       <add verb="*" path="*.mvc" validate="false" type="System.Web.Mvc.MvcHttpHandler" />
     </httpHandlers>
+
+
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -89,7 +94,7 @@
       <add name="MvcHttpHandler" preCondition="integratedMode" verb="*" path="*.mvc" type="System.Web.Mvc.MvcHttpHandler" />
     </handlers>
   </system.webServer>
-  <runtime>
+  <runtime  >
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
