--- a/src/HOAHome/HOAHome/HOAHome.csproj
+++ b/src/HOAHome/HOAHome/HOAHome.csproj
@@ -139,9 +139,14 @@
     <Compile Include="AccountController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\nh\Controllers\HomeController.cs" />
+    <Compile Include="Areas\nh\Controllers\NeighborhoodController.cs" />
+    <Compile Include="Areas\nh\Controllers\NeighborhoodControllerBase.cs" />
+    <Compile Include="Areas\nh\nhAreaRegistration.cs" />
     <Compile Include="Code\Configuration.cs" />
     <Compile Include="Code\ContentManagement\ContentBundle.cs" />
     <Compile Include="Code\ContentManagement\HtmlHelperExtensions.cs" />
+    <Compile Include="Code\ContentManagement\IContentRepository.cs" />
     <Compile Include="Code\EntityFramework\IAuditable.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -224,6 +229,15 @@
     <Compile Include="NeighborhoodController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="nh.HomeController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="nh.NeighborhoodController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="nh.SharedController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\ContentManagement\ContentRepository.cs" />
     <Compile Include="Repositories\AppUserRepository.cs" />
@@ -257,6 +271,24 @@
     <Content Include="Content\anylinkcssmenu.css" />
     <Content Include="Content\anylinkcssmenu.js" />
     <Content Include="Global.asax" />
+    <Content Include="hoagwt20\clear.cache.gif" />
+    <Content Include="hoagwt20\gwt\standard\images\corner.png" />
+    <Content Include="hoagwt20\gwt\standard\images\corner_ie6.png" />
+    <Content Include="hoagwt20\gwt\standard\images\hborder.png" />
+    <Content Include="hoagwt20\gwt\standard\images\hborder_ie6.png" />
+    <Content Include="hoagwt20\gwt\standard\images\ie6\corner_dialog_topleft.png" />
+    <Content Include="hoagwt20\gwt\standard\images\ie6\corner_dialog_topright.png" />
+    <Content Include="hoagwt20\gwt\standard\images\ie6\hborder_blue_shadow.png" />
+    <Content Include="hoagwt20\gwt\standard\images\ie6\hborder_gray_shadow.png" />
+    <Content Include="hoagwt20\gwt\standard\images\ie6\vborder_blue_shadow.png" />
+    <Content Include="hoagwt20\gwt\standard\images\ie6\vborder_gray_shadow.png" />
+    <Content Include="hoagwt20\gwt\standard\images\splitPanelThumb.png" />
+    <Content Include="hoagwt20\gwt\standard\images\vborder.png" />
+    <Content Include="hoagwt20\gwt\standard\images\vborder_ie6.png" />
+    <Content Include="hoagwt20\gwt\standard\standard.css" />
+    <Content Include="hoagwt20\gwt\standard\standard_rtl.css" />
+    <Content Include="hoagwt20\hoagwt20.nocache.js" />
+    <Content Include="hoagwt20\hosted.html" />
     <Content Include="Services\HoaService.svc" />
     <Content Include="TODO.txt" />
     <Content Include="Views\Account\Settings.aspx" />
@@ -264,12 +296,12 @@
     <Content Include="Views\Director\Financals.aspx" />
     <Content Include="Views\Director\Members.aspx" />
     <Content Include="Views\Home\DisplaySearchResults.aspx" />
-    <Content Include="Views\Neighborhood\AddHome.aspx" />
+    <Content Include="Areas\nh\Views\Home\AddHome.aspx" />
     <Content Include="Views\Neighborhood\Calendar.aspx" />
     <Content Include="Views\Neighborhood\Create.aspx" />
     <Content Include="Views\Neighborhood\Details.aspx" />
-    <Content Include="Views\Neighborhood\Homes.aspx" />
-    <Content Include="Views\Neighborhood\Index.aspx" />
+    <Content Include="Areas\nh\Views\Home\Homes.aspx" />
+    <Content Include="Areas\nh\Views\Neighborhood\Index.aspx" />
     <Content Include="Views\Neighborhood\List.aspx" />
     <Content Include="Views\Shared\DisplayTemplates\Home.ascx" />
     <Content Include="Views\Shared\DisplayTemplates\UserHome.ascx" />
@@ -309,6 +341,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\nh\Models\" />
+    <Folder Include="Areas\nh\Views\Shared\" />
     <Folder Include="Diagrams\" />
   </ItemGroup>
   <ItemGroup>
@@ -321,6 +355,7 @@
     <EntityDeploy Include="Models\EFModel.edmx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\nh\Views\Web.config" />
     <None Include="Models\CustomModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CustomModel.cs</LastGenOutput>
