--- a/src/HOAHome/HOAHome.Tests/HOAHome.Tests.csproj
+++ b/src/HOAHome/HOAHome.Tests/HOAHome.Tests.csproj
@@ -94,10 +94,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Shadow Include="Test References\HOAHome.accessor" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Controllers\IntegrationTest\" />
+    <Folder Include="Test References\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
