--- a/src/HOAHome/HOAHome/Web.config
+++ b/src/HOAHome/HOAHome/Web.config
@@ -73,7 +73,8 @@
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
+        <!--<add namespace="System.Web.Mvc.Html" />-->
+        <add namespace="Microsoft.Web.Mvc.AspNet4.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="HOAHome.Code.Mvc" />
         <add namespace="HOAHome.Code.ContentManagement" />
