Added location column to neighborhood

--- a/src/HOAHome/HOAHome/Web.config
+++ b/src/HOAHome/HOAHome/Web.config
@@ -79,6 +79,7 @@
         <add namespace="HOAHome.Code.Mvc" />
         <add namespace="HOAHome.Code.ContentManagement" />
         <add namespace="HOAHome.Models" />
+        <add namespace="MvcContrib.UI.Grid" />
       </namespaces>
     </pages>
     <httpHandlers>
