--- a/src/HOAHome/HOAHome/Web.config
+++ b/src/HOAHome/HOAHome/Web.config
@@ -36,6 +36,8 @@
   </connectionStrings>
   <appSettings>
     <add key="GoogleApiKey" value="ABQIAAAACPMbozlNv9AIzNvsWUm6vhSvnLMDprvOSMH9Qt_oH5Ww7FTw1hRHT7gTSie1yM34rowNwVfw424XPA" />
+    <add key="ClientValidationEnabled" value="false" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="false" />
   </appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" />
@@ -43,8 +45,10 @@
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
     <authentication mode="Forms">
@@ -80,6 +84,8 @@
         <add namespace="HOAHome.Code.ContentManagement" />
         <add namespace="HOAHome.Models" />
         <add namespace="MvcContrib.UI.Grid" />
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
     <httpHandlers>
@@ -100,7 +106,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
